@@ -377,3 +377,12 @@ First order indices =  [0.900039,0.092229,-0.000294721]
 Aggregated first order indices interval =  [0.897154, 0.902924]
 [0.073066, 0.111392]
 [-0.0197411, 0.0191517]
+Size: 100
+Method A : [0.050261,0.266496,0.108543] [-0.0871929,-0.148519,0.0633381]
+Method B : [0.050261,0.266496,0.108543] [-0.0871929,-0.148519,0.0633381]
+Size: 1000
+Method A : [-0.0312263,-0.0174744,-0.0826311] [0.00901844,0.0127451,-0.0240646]
+Method B : [-0.0312263,-0.0174744,-0.0826311] [0.00901844,0.0127451,-0.0240646]
+Size: 10000
+Method A : [-0.015502,-0.0116919,0.00171568] [-0.00851815,0.00520363,0.00710071]
+Method B : [-0.015502,-0.0116919,0.00171568] [-0.00851815,0.00520363,0.00710071]
